codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_plan_detail.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: "render_bottom_popup(&chat, 110)"
---
  Map existing goal persistence and
  active · 0/2 goals complete · ai-directed · 25K tokens · time 3m · +18 -4 LOC

  Search plan goals
› Current: Map existing goal persistence and · active · time 1m     Map existing goal persistence and UI
                                                                    surfaces · no dependencies · 12.5K
                                                                    tokens · time 1m · +18 -4 LOC
    Implement durable dependent goal execution · pending · time 1m
  Back to goals

  Press enter to confirm or esc to go back
