codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_collab_wait_renders_aggregated_top_status.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Waiting for 2 agents (0s • esc to interrupt)                                  "
"  └ • Robie — Inspect status rendering · 0s                                     "
"    • Ada — reviewer · 0s                                                       "
"                                                                                "
"                                                                                "
"› Ask Codewith to do anything                                                   "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
"                                                                                "
"                                                                                "
"                                                                                "
