codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__loop_actions_popup.snap
---
source: tui/src/chatwidget/tests/loop_menu.rs
assertion_line: 102
expression: "render_bottom_popup(&chat, 100)"
---
  Loop sch_paused
  paused · every 5 minutes · next not scheduled · tz UTC · failure streak 2 failures

› 1. Run now                 Queue this prompt immediately
  2. Edit prompt             Change the prompt used on future runs
  3. Stats                   Show run counts and latest outcomes
  4. Resume                  Start scheduling future runs again
  5. Delete                  Remove this loop from the thread
  6. Back to loops           Return to all scheduled prompts

  Press enter to confirm or esc to go back
